--- a/clm_landusedata.ipynb
+++ b/clm_landusedata.ipynb
@@ -99,8 +99,6 @@
     "pasture_pft_percent = fin_pasturedata.PCT_NAT_PFT.isel(natpft=slice(1,None)) / fin_pasturedata.PCT_NAT_PFT.isel(natpft=slice(1,None)).sum(dim='natpft') * 100. * landoceanmask\n",
     "other_pft_percent = fin_otherdata.PCT_NAT_PFT.isel(natpft=slice(1,None)) / fin_otherdata.PCT_NAT_PFT.isel(natpft=slice(1,None)).sum(dim='natpft') * 100. * landoceanmask\n",
     "\n",
-    "primary_secondary_percent = luh2_staticdata.fstnf * forest_pft_percent + (1.- luh2_staticdata.fstnf) * other_pft_percent\n",
-    "\n",
     "current_surfdata_percent = fin_surfdata.PCT_NAT_PFT.isel(natpft=slice(1,None)) / fin_surfdata.PCT_NAT_PFT.isel(natpft=slice(1,None)).sum(dim='natpft') * 100. * landoceanmask\n"
    ]
   },
@@ -139,7 +137,7 @@
     {
      "data": {
       "text/plain": [
-       "<cartopy.mpl.feature_artist.FeatureArtist at 0x1648eb070>"
+       "<cartopy.mpl.feature_artist.FeatureArtist at 0x15adce070>"
       ]
      },
      "execution_count": 6,
@@ -184,7 +182,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/6g/x_x6jm6s1jq6fz2gmv70hhdh0000gp/T/ipykernel_99767/4173017881.py:3: DeprecationWarning: self.axes is deprecated since 2022.11 in order to align with matplotlibs plt.subplots, use self.axs instead.\n",
+      "/var/folders/6g/x_x6jm6s1jq6fz2gmv70hhdh0000gp/T/ipykernel_99880/4173017881.py:3: DeprecationWarning: self.axes is deprecated since 2022.11 in order to align with matplotlibs plt.subplots, use self.axs instead.\n",
       "  for ax in fg.axes.flat:\n"
      ]
     },
@@ -232,7 +230,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/6g/x_x6jm6s1jq6fz2gmv70hhdh0000gp/T/ipykernel_99767/4172619223.py:3: DeprecationWarning: self.axes is deprecated since 2022.11 in order to align with matplotlibs plt.subplots, use self.axs instead.\n",
+      "/var/folders/6g/x_x6jm6s1jq6fz2gmv70hhdh0000gp/T/ipykernel_99880/4172619223.py:3: DeprecationWarning: self.axes is deprecated since 2022.11 in order to align with matplotlibs plt.subplots, use self.axs instead.\n",
       "  for ax in fg.axes.flat:\n"
      ]
     },
@@ -280,7 +278,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/6g/x_x6jm6s1jq6fz2gmv70hhdh0000gp/T/ipykernel_99767/1479862244.py:3: DeprecationWarning: self.axes is deprecated since 2022.11 in order to align with matplotlibs plt.subplots, use self.axs instead.\n",
+      "/var/folders/6g/x_x6jm6s1jq6fz2gmv70hhdh0000gp/T/ipykernel_99880/1479862244.py:3: DeprecationWarning: self.axes is deprecated since 2022.11 in order to align with matplotlibs plt.subplots, use self.axs instead.\n",
       "  for ax in fg.axes.flat:\n"
      ]
     },
@@ -330,7 +328,7 @@
     {
      "data": {
       "text/plain": [
-       "<cartopy.mpl.feature_artist.FeatureArtist at 0x2a9e04700>"
+       "<cartopy.mpl.feature_artist.FeatureArtist at 0x15dddad30>"
       ]
      },
      "execution_count": 10,
@@ -374,7 +372,7 @@
     {
      "data": {
       "text/plain": [
-       "<cartopy.mpl.feature_artist.FeatureArtist at 0x2a9edd2b0>"
+       "<cartopy.mpl.feature_artist.FeatureArtist at 0x17fd19040>"
       ]
      },
      "execution_count": 11,
@@ -411,7 +409,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/6g/x_x6jm6s1jq6fz2gmv70hhdh0000gp/T/ipykernel_99767/197952380.py:3: DeprecationWarning: self.axes is deprecated since 2022.11 in order to align with matplotlibs plt.subplots, use self.axs instead.\n",
+      "/var/folders/6g/x_x6jm6s1jq6fz2gmv70hhdh0000gp/T/ipykernel_99880/197952380.py:3: DeprecationWarning: self.axes is deprecated since 2022.11 in order to align with matplotlibs plt.subplots, use self.axs instead.\n",
       "  for ax in fg.axes.flat:\n"
      ]
     },
@@ -462,7 +460,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/6g/x_x6jm6s1jq6fz2gmv70hhdh0000gp/T/ipykernel_99767/280475084.py:3: DeprecationWarning: self.axes is deprecated since 2022.11 in order to align with matplotlibs plt.subplots, use self.axs instead.\n",
+      "/var/folders/6g/x_x6jm6s1jq6fz2gmv70hhdh0000gp/T/ipykernel_99880/280475084.py:3: DeprecationWarning: self.axes is deprecated since 2022.11 in order to align with matplotlibs plt.subplots, use self.axs instead.\n",
       "  for ax in fg.axes.flat:\n"
      ]
     },
